# hftbot

./: CMakeLists.txt  benchmark.cpp  main.cpp  market_data.h  readme.md  strategy.h  trading_system.h
